--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
          
     
         <div class="form">
-            <h1>Contact Me</h1>
-            <p class="a">Name</p>
-            <input type="text" class="y_name" placeholder="Name">
-            <p class="a">Email</p>
-            <input type="email" class="y_email" placeholder="Email">
-            <p class="a">Message</p>
-            <textarea class="y_message" placeholder="Write ypur message"></textarea>
-            <button class="submit" onclick="check_form()">submit</button>
+            <form>
+                <h1>Contact Me</h1>
+                <p class="a">Name</p>
+                <input type="text" class="y_name" placeholder="Name">
+                <p class="a">Email</p>
+                <input type="email" class="y_email" placeholder="Email">
+                <p class="a">Message</p>
+                <textarea class="y_message" placeholder="Write ypur message"></textarea>
+                <button class="submit" onclick="check_form()">submit</button>
+            </form>
         </div>
     </div>
 
